Updates from Overleaf

--- a/01_frontmatter/acronyms.tex
+++ b/01_frontmatter/acronyms.tex
@@ -3,6 +3,7 @@
 
 \begin{acronym}[HOAI]  % Längste Abkürzung für Spaltenbreite
     \acro{TVD}{Target Value Design}
+    \acro{PRISMA}{Preferred Reporting Items for Systematic Reviews and Meta-Analyses}
     \acro{IPA}{Integrierte Projektabwicklung}
     \acro{IPD}{Integrated Project Delivery}
     \acro{LC}{Lean Construction}
