--- a/02_mainmatter/ch3_Methodik.tex
+++ b/02_mainmatter/ch3_Methodik.tex
@@ -87,7 +87,7 @@ Wie in \cref{ch:einleitung} dargelegt, erfordert die Bewältigung der aktuellen 
 
 %   - Ziel: Das Vorgehen bei der Literatursuche und -auswahl exakt dokumentieren.
 
-Der Auswahlprozess relevanter Literatur stützt sich auf das \ac{PRISMA}-Protokoll (Preferred Reporting Items for Systematic Reviews and Meta-Analyses). Dieses bildet, als international anerkannte Richtlinie für Literatur-Reviews, den gesamten Prozess der von der Suche, über die Auswahl bis hin zur Präsentation von Studien ab und gewährleistet Transparenz (Reproduzierbarkeit), Vollständigkeit und Vergleichbarkeit für die Forschungsergebnisse \autocite{page_2021_prisma}. Der im PRISMA-Protokoll definierte, mehrstufigen Filter- und Auswahlprozess dient hier als methodische Grundlage für die systematische Literaturrecherche und  in (\cref{fig:prisma_flowchart}) nachfolgend dargestellt.
+Der Auswahlprozess relevanter Literatur stützt sich auf das international anerkannte Protokoll \acsf{PRISMA}. Dieses bildet als Richtlinie für Literatur-Reviews, den gesamten Prozess der von der Suche, über die Auswahl bis hin zur Präsentation von Studien ab und gewährleistet Transparenz (Reproduzierbarkeit), Vollständigkeit und Vergleichbarkeit für die Forschungsergebnisse \autocite{page_2021_prisma}. Der im \ac{PRISMA}-Protokoll definierte, mehrstufigen Filter- und Auswahlprozess dient hier als methodische Grundlage für die systematische Literaturrecherche und  in (\cref{fig:prisma_flowchart}) nachfolgend dargestellt.
 
 \begin{figure}[hbt!]
   \centering
@@ -200,17 +200,14 @@ Im ersten Schritt der Literaturrecherche wurden zunächst relevante zunächst re
     \item \textbf{Beispiel 4}: 
 \end{itemize}
 
-Die initiale Sammlung stellt eine erste Grundlage für den nachfolgenden Auswahlprozess dar. Inwieweit diese Auswahl erschöpfende Ergebnisse liefert, wird, unter Berücksichtigung sowohl der inhaltlichen Divergenz der Datenbanken, als auch des zusätzlichen Erkenntnisgewinns durch neu hinzukommende Quellen, im Laufe des Filterprozesses überprüft.\\
-Für die gewählten Datenbanken galt es im folgenden eine geeignete Suchstrategie zu wählen bzw. zu entwickeln. Hierfür wurden 
+Diese initiale Sammlung stellt eine erste Grundlage für den nachfolgenden Auswahlprozess dar. Inwieweit diese Auswahl erschöpfende Ergebnisse liefert, wird, unter Berücksichtigung sowohl der inhaltlichen Divergenz der Datenbanken, als auch des zusätzlichen Erkenntnisgewinns durch neu hinzukommende Quellen, im Laufe des Filterprozesses überprüft.\\
+Für die gewählten Datenbanken galt es im folgenden eine geeignete Suchstrategie zu wählen bzw. zu entwickeln. Hierfür wurden erste Filterkriterien und geeignete Schlüsselbegriffe und Operatoren definiert. Die im folgenden aufgeführten Einschränkungen sollen bei der initialen Suchanfrage die Ergebnisse vor filtern:
 
 \textbf {Gewählte Einschränkungen}
 
-Sprache: 
-\begin{itemize}[leftmargin=2em]
-\item \textbf{Deutsch}: Zur Erfassung deutschsprachiger bzw. bereits im deutschen Kontext oder Blickwinkel entstandene Quellen.
-\item \textbf{Englisch}: Essentiell für internationale Publikationen. Vor dem Hintergrund, dass der Ursprung und die wesentliche Entwicklung von \ac{TVD} und allen verwandten Themenfelder im anglo-amerikanischen Raum stattgefunden hat bzw. stattfindet, wird englisch in diesem Kontext als einzige wesentlich relevante Fremdsprache erachtet.
-\end{itemize}
-
+Sprache: \\
+\textbf{Deutsch}: Zur Erfassung deutschsprachiger bzw. bereits im deutschen Kontext oder Blickwinkel entstandene Quellen.\\
+\textbf{Englisch}: Essentiell für internationale Publikationen. Vor dem Hintergrund, dass der Ursprung und die wesentliche Entwicklung von \ac{TVD} und allen verwandten Themenfelder im anglo-amerikanischen Raum stattgefunden hat bzw. stattfindet \autocite{Quelle bzw. Verweis erforderlich?}, wird englisch in diesem Kontext als einzige wesentlich relevante Fremdsprache erachtet.\\
 
 Die hier Angewandte Suchstrategie verwendet Schlüsselbegriffe bzw. Wörter und Kombinationen auf deutsch und englisch:
 
@@ -239,6 +236,7 @@ Die hier Angewandte Suchstrategie verwendet Schlüsselbegriffe bzw. Wörter und 
 %     - Analysemethode: Qualitative Inhaltsanalyse zur Identifikation von Prozessbausteinen, Rollen, Werkzeugen.
 
 \FloatBarrier
+\clearpage
 
 \section{Prozessbeschreibung und Modellierung}
 \label{sec: 3.3}
