Updates from Overleaf

--- a/02_mainmatter/ch3_Methodik.tex
+++ b/02_mainmatter/ch3_Methodik.tex
@@ -3,23 +3,20 @@
 
 % Ziel: Das Vorgehen der Arbeit transparent und wissenschaftlich nachvollziehbar darlegen.
 % Es wird der "Plan" für die Forschung beschrieben.
-
-Wie in \cref{ch:einleitung} dargelegt, erfordert die Bewältigung der aktuellen Herausforderungen im Bauwesen neue Ansätze der Projektabwicklung wie \
-
 \section{Forschungsdesign und methodische Verortung}
 \label{sec: 3.1}
-%   - Ziel: Wahl der Methodik begründen und wissenschaftlich einordnen.
-%   - Inhalt:
-%     - Wiederholung der Forschungsfrage.
-%     - Begründung für literaturbasierten, konzeptionell-analytischen Ansatz.
-%     - Abgrenzung zu anderen Methoden (z.B. empirisch).
-%     - Optional: Visualisierung des Vorgehens als einfaches Flussdiagramm.
 \subsection{Herleitung des Forschungsbedarfs aus der Forschungsfrage}
 \label{sec: 3.1.1}
 
-%   Wiederholung der Forschungsfrage prägnant
-%   Ableitung der notwendingen Schritte zur Beantwortung
-%   
+Wie in \cref{ch:einleitung} dargelegt, erfordert die Bewältigung der aktuellen Herausforderungen im Bauwesen neue Ansätze und Methoden. Die aktuell noch überwiegend praktizierte, konventionelle  Art der Projektabwicklung, welche vor allem von einer ausgeprägten Streitkultur charakterisiert wird, ist diesen großen Aufgaben offensichtlich nicht gewachsen, wie sich aus den aktuellen Zahlen und Entwicklung der Bauwirtschaft ableiten lässt.\\
+Hier rücken aktuell alternative, partnerschaftliche Projektabwicklungsmodelle wie \ac{IPA} in den Fokus und finden auch in Deutschland zunehmend in Pilotprojekten Anwendung \autocite{haghsheno_ipa-report_2025}.\\
+- TVD als Kernprozess/Methode zur Werk- und Kostensteuerung innerhalb des IPA-Rahmens\\
+- Wiederholung der Forschungsfrage\\
+- 
+
+- Begründung für literaturbasierten, konzeptionell-analytischen Ansatz.\\
+- Abgrenzung zu anderen Methoden (z.B. empirisch).\\
+- Ableitung der notwendigen Schritte zur Beantwortung\\
 
 
 \subsection{Einordnung in das Forschungsparadigma: Ein qualitativ-konstruktiver Ansatz}
@@ -85,14 +82,10 @@ Wie in \cref{ch:einleitung} dargelegt, erfordert die Bewältigung der aktuellen 
 \section{Systematische Literaturrecherche und -analyse}
 \label{sec: 3.2}
 
-%   - Ziel: Das Vorgehen bei der Literatursuche und -auswahl exakt dokumentieren.
-
 Der Auswahlprozess relevanter Literatur stützt sich auf das international anerkannte Protokoll \acsf{PRISMA}. Dieses bildet als Richtlinie für Literatur-Reviews, den gesamten Prozess der von der Suche, über die Auswahl bis hin zur Präsentation von Studien ab und gewährleistet Transparenz (Reproduzierbarkeit), Vollständigkeit und Vergleichbarkeit für die Forschungsergebnisse \autocite{page_2021_prisma}. Der im \ac{PRISMA}-Protokoll definierte, mehrstufigen Filter- und Auswahlprozess dient hier als methodische Grundlage für die systematische Literaturrecherche und  in (\cref{fig:prisma_flowchart}) nachfolgend dargestellt.
 
 \begin{figure}[hbt!]
   \centering
-  
-  % --- TIKZ CODE FÜR DAS PRISMA-FLUSSDIAGRAMM ---
   \begin{tikzpicture}[
     node distance=0.5cm and 1cm, % Vertikaler und horizontaler Abstand
     % Stil für die Haupt-Boxen im Prozess
@@ -201,15 +194,7 @@ Im ersten Schritt der Literaturrecherche wurden zunächst relevante zunächst re
 \end{itemize}
 
 Diese initiale Sammlung stellt eine erste Grundlage für den nachfolgenden Auswahlprozess dar. Inwieweit diese Auswahl erschöpfende Ergebnisse liefert, wird, unter Berücksichtigung sowohl der inhaltlichen Divergenz der Datenbanken, als auch des zusätzlichen Erkenntnisgewinns durch neu hinzukommende Quellen, im Laufe des Filterprozesses überprüft.\\
-Für die gewählten Datenbanken galt es im folgenden eine geeignete Suchstrategie zu wählen bzw. zu entwickeln. Hierfür wurden erste Filterkriterien und geeignete Schlüsselbegriffe und Operatoren definiert. Die im folgenden aufgeführten Einschränkungen sollen bei der initialen Suchanfrage die Ergebnisse vor filtern:
-
-\textbf {Gewählte Einschränkungen}
-
-Sprache: \\
-\textbf{Deutsch}: Zur Erfassung deutschsprachiger bzw. bereits im deutschen Kontext oder Blickwinkel entstandene Quellen.\\
-\textbf{Englisch}: Essentiell für internationale Publikationen. Vor dem Hintergrund, dass der Ursprung und die wesentliche Entwicklung von \ac{TVD} und allen verwandten Themenfelder im anglo-amerikanischen Raum stattgefunden hat bzw. stattfindet \autocite{Quelle bzw. Verweis erforderlich?}, wird englisch in diesem Kontext als einzige wesentlich relevante Fremdsprache erachtet.\\
-
-Die hier Angewandte Suchstrategie verwendet Schlüsselbegriffe bzw. Wörter und Kombinationen auf deutsch und englisch:
+Für die gewählten Datenbanken galt es im folgenden eine geeignete Suchstrategie zu wählen bzw. zu entwickeln. Hierfür wurden erste Filterkriterien und geeignete Schlüsselbegriffe und Operatoren auf deutsch und englisch definiert:
 
 \begin{table}[hbt!]
   \centering
@@ -229,6 +214,15 @@ Die hier Angewandte Suchstrategie verwendet Schlüsselbegriffe bzw. Wörter und 
     \bottomrule
   \end{tabularx}
 \end{table}
+
+\FloatBarrier
+
+\subsection{Schritt 2: Screening}
+Die im folgenden aufgeführten Einschränkungen sollen die Ergebnisse aus der initialen Suchanfrage filtern:
+
+\textbf{Sprache:} \\
+\textbf{Deutsch}: Zur Erfassung deutschsprachiger bzw. bereits im deutschen Kontext oder Blickwinkel entstandene Quellen.\\
+\textbf{Englisch}: Essentiell für internationale Publikationen. Vor dem Hintergrund, dass der Ursprung und die wesentliche Entwicklung von \ac{TVD} und allen verwandten Themenfelder im anglo-amerikanischen Raum stattgefunden hat bzw. stattfindet \autocite{Quelle bzw. Verweis erforderlich?}, wird englisch in diesem Kontext als einzige wesentlich relevante Fremdsprache erachtet.\\
 
 %     - Recherchestrategie: Genutzte Datenbanken (Scopus, etc.), Fachinstitutionen (GLCI, etc.).
 %     - Suchbegriffe: Beispiele für Keyword-Kombinationen (DE/EN).
