Updates from Overleaf

--- a/02_mainmatter/ch3_Methodik.tex
+++ b/02_mainmatter/ch3_Methodik.tex
@@ -9,12 +9,17 @@
 \label{sec: 3.1.1}
 
 Wie in \cref{ch:einleitung} dargelegt, erfordert die Bewältigung der aktuellen Herausforderungen im Bauwesen neue Ansätze und Methoden. Die aktuell noch überwiegend praktizierte, konventionelle  Art der Projektabwicklung, welche vor allem von einer ausgeprägten Streitkultur charakterisiert wird, ist diesen großen Aufgaben offensichtlich nicht gewachsen, wie sich aus den aktuellen Zahlen und Entwicklung der Bauwirtschaft ableiten lässt.\\
-Hier rücken aktuell alternative, partnerschaftliche Projektabwicklungsmodelle wie \ac{IPA} in den Fokus und finden auch in Deutschland zunehmend in Pilotprojekten Anwendung \autocite{haghsheno_ipa-report_2025}.\\
-- TVD als Kernprozess/Methode zur Werk- und Kostensteuerung innerhalb des IPA-Rahmens\\
-- Wiederholung der Forschungsfrage\\
-- 
+Als Reaktion darauf derzeit alternative, partnerschaftliche Projektabwicklungsmodelle wie \ac{IPA} und deren zentrale Methode zur Kosten- und Wertsteuerung, das Target Value Design (\ac{TVD}) in den Fokus. Zwar fasst IPA in Deutschland zunehmend in Pilotprojekten mehr und mehr Fuß und wird auch in der Forschung zunehmend behandelt, so wird jedoch TVD als zentraler Prozessbaustein in der aktuellen Debatte nur unzureichend betrachtet \autocite{haghsheno_ipa-report_2025}.\\
+Auf internationaler Ebene, haben Ballard und Kollegen bereits einiges zur Forschung und Entwicklung von \ac{TVD} beigetragen, eine strukturierte Darstellung und Aufbereitung für die Anwendung im Kontext der deutschen Baupraxis fehlt jedoch bisher, woraus sich die Forschungsfrage dieser Arbeit ableitet:
+
+\endquote{Wie lässt sich der Target Value Design-Prozess strukturiert in Einzelschritte zerlegen, nachvollziehbar darstellen und für die Anwendung in der deutschen Baupraxis übersetzen, um den strukturellen Defiziten der traditionellen Projektabwicklung entgegenzuwirken?}
+
+Die Beantwortung dieser Frage erfordert ein mehrstufiges, konzeptionell-analytisches Vorgehen. So impliziert die geforderte "Zerlegung in Einzelschritte" die Notwendigkeit einer systematischen Identifikation der TVD-Prozessbausteine aus der internationalen Fachliteratur. Die "nachvollziehbare Darstellung" verlangt deren anschließende Synthese zu einem idealtypischen Prozessmodell. Schließlich bedingt die "Übersetzung für die deutsche Baupraxis" einen systematischen Abgleich dieses Modells mit den hierzulande vorherrschenden rechtlichen und kulturellen Rahmenbedingungen.
+
 
 - Begründung für literaturbasierten, konzeptionell-analytischen Ansatz.\\
+
+
 - Abgrenzung zu anderen Methoden (z.B. empirisch).\\
 - Ableitung der notwendigen Schritte zur Beantwortung\\
 
