Updates from Overleaf

--- a/02_mainmatter/ch3_Methodik.tex
+++ b/02_mainmatter/ch3_Methodik.tex
@@ -5,38 +5,37 @@
 % Es wird der "Plan" für die Forschung beschrieben.
 \section{Forschungsdesign und methodische Verortung}
 \label{sec: 3.1}
-\subsection{Herleitung des Forschungsbedarfs aus der Forschungsfrage}
+\subsection{Herleitung des Forschungsbedarfs}
 \label{sec: 3.1.1}
 
 Wie in \cref{ch:einleitung} dargelegt, erfordert die Bewältigung der aktuellen Herausforderungen im Bauwesen neue Ansätze und Methoden. Die aktuell noch überwiegend praktizierte, konventionelle  Art der Projektabwicklung, welche vor allem von einer ausgeprägten Streitkultur charakterisiert wird, ist diesen großen Aufgaben offensichtlich nicht gewachsen, wie sich aus den aktuellen Zahlen und Entwicklung der Bauwirtschaft ableiten lässt.\\
-Als Reaktion darauf derzeit alternative, partnerschaftliche Projektabwicklungsmodelle wie \ac{IPA} und deren zentrale Methode zur Kosten- und Wertsteuerung, das Target Value Design (\ac{TVD}) in den Fokus. Zwar fasst IPA in Deutschland zunehmend in Pilotprojekten mehr und mehr Fuß und wird auch in der Forschung zunehmend behandelt, so wird jedoch TVD als zentraler Prozessbaustein in der aktuellen Debatte nur unzureichend betrachtet \autocite{haghsheno_ipa-report_2025}.\\
+Als Reaktion darauf rücken derzeit alternative, partnerschaftliche Projektabwicklungsmodelle wie \ac{IPA} und deren zentrale Methode zur Kosten- und Wertsteuerung, das Target Value Design (\ac{TVD}) in den Fokus. Zwar fasst IPA in Deutschland zunehmend in Pilotprojekten mehr und mehr Fuß und wird auch in der Forschung zunehmend behandelt, so wird jedoch TVD als zentraler Prozessbaustein in der aktuellen Debatte nur unzureichend betrachtet \autocite{haghsheno_ipa-report_2025}.\\
 Auf internationaler Ebene, haben Ballard und Kollegen bereits einiges zur Forschung und Entwicklung von \ac{TVD} beigetragen, eine strukturierte Darstellung und Aufbereitung für die Anwendung im Kontext der deutschen Baupraxis fehlt jedoch bisher, woraus sich die Forschungsfrage dieser Arbeit ableitet:
 
 \endquote{Wie lässt sich der Target Value Design-Prozess strukturiert in Einzelschritte zerlegen, nachvollziehbar darstellen und für die Anwendung in der deutschen Baupraxis übersetzen, um den strukturellen Defiziten der traditionellen Projektabwicklung entgegenzuwirken?}
 
-Die Beantwortung dieser Frage erfordert ein mehrstufiges, konzeptionell-analytisches Vorgehen. So impliziert die geforderte "Zerlegung in Einzelschritte" die Notwendigkeit einer systematischen Identifikation der TVD-Prozessbausteine aus der internationalen Fachliteratur. Die "nachvollziehbare Darstellung" verlangt deren anschließende Synthese zu einem idealtypischen Prozessmodell. Schließlich bedingt die "Übersetzung für die deutsche Baupraxis" einen systematischen Abgleich dieses Modells mit den hierzulande vorherrschenden rechtlichen und kulturellen Rahmenbedingungen.
+Die Beantwortung dieser Frage erfordert ein mehrstufiges, konzeptionell-analytisches Vorgehen. So impliziert die geforderte \glqq Zerlegung in Einzelschritte\grqq die Notwendigkeit einer systematischen Identifikation der TVD-Prozessbausteine aus der internationalen Fachliteratur. Die nachvollziehbare Darstellung verlangt deren anschließende Synthese zu einem idealtypischen Prozessmodell. Schließlich bedingt die "Übersetzung für die deutsche Baupraxis" einen systematischen Abgleich dieses Modells mit den hierzulande vorherrschenden rechtlichen und kulturellen Rahmenbedingungen.
 
+Während die internationale Forschung die Grundlagen und Erfolgsfaktoren von TVD bereits umfassend beleuchtet hat \autocite{z.B. Ballard}, fehlt bislang eine systematische, prozessorientierte Aufbereitung, die den TVD-Prozess explizit für die Anwendung im deutschen Kontext adaptiert. Diese Forschungslücke begründet die Notwendigkeit der vorliegenden Arbeit und legitimiert das im Folgenden detailliert beschriebene methodische Vorgehen.
 
-- Begründung für literaturbasierten, konzeptionell-analytischen Ansatz.\\
-
-
-- Abgrenzung zu anderen Methoden (z.B. empirisch).\\
-- Ableitung der notwendigen Schritte zur Beantwortung\\
-
-
-\subsection{Einordnung in das Forschungsparadigma: Ein qualitativ-konstruktiver Ansatz}
+\subsection{Einordnung in das Forschungsparadigma}
 \label{sec: 3.1.2}
 
-\subsection{Wahl des konkreten Forschungsdesigns: Die konzeptionell-analytische Arbeit}
+Diese Arbeit als qualitativ verorten
+Begründung: der Kern besteht aus der Analyse von Inhalten (Texte, Konzepte), nicht auf Statistik
+
+
+
+\subsection{Wahl des konkreten Forschungsdesigns}
 \label{sec: 3.1.3}
 
-  \subsection{Gütekriterien des qualitativen Forschungsdesigns}
+  \subsection{Gütekriterien}
 \label{sec: 3.1.4}
 
 \subsection{Visualisierung des Forschungsprozesses}
 \label{sec: 3.1.5}
+Zur Veranschaulichung des methodischen Aufbaus und Verlauf dieser Arbeit visualisiert \cref{fig:forschungsprozess_tikz} den Forschungsprozess in seinen verschiedenen Phasen.
 
-% Definition von Stilen, um den Code sauber zu halten
 \tikzset{
   phase/.style={rectangle, rounded corners, draw=black, fill=gray!10,
                 text width=0.85\textwidth, minimum height=1.5cm, text centered},
