Updates from Overleaf

--- a/02_mainmatter/ch1_Einleitung.tex
+++ b/02_mainmatter/ch1_Einleitung.tex
@@ -29,7 +29,7 @@ Daraus leitet sich die folgende zentrale Forschungsfrage ab:
 \enquote{Wie lässt sich der Target Value Design-Prozess strukturiert in Einzelschritte zerlegen, nachvollziehbar darstellen und für die Anwendung in der deutschen Baupraxis übersetzen, um den strukturellen Defiziten der traditionellen Projektabwicklung entgegenzuwirken?}
 
 \subsection*{Exploratives Nebenziel}
-Ergänzend zum Hauptziel soll diese Arbeit einen explorativen Ausblick auf eine weitere Forschungslücke, die mögliche Übertragbarkeit von TVD im Hochbau auf Infrastrukturprojekte \autocite [S.45]{ballard2025}, gewähren. Ziel ist es aufzuzeigen, welche spezifischen Charakteristika diese Bauprojektarten (z.\,B. Linienbaustellen) aufweisen und welche der zuvor herausgearbeiteten Bausteine des TVD hier potenziell anwendbar wären bzw. einer Anpassung bedürfen.
+Ergänzend zum Hauptziel soll diese Arbeit einen explorativen Ausblick auf eine weitere Forschungslücke, die mögliche Übertragbarkeit von TVD im Hochbau auf Infrastrukturprojekte \autocite [Vgl.][S.45]{ballard2025}, gewähren. Ziel ist es aufzuzeigen, welche spezifischen Charakteristika diese Bauprojektarten (z.\,B. Linienbaustellen) aufweisen und welche der zuvor herausgearbeiteten Bausteine des TVD hier potenziell anwendbar wären bzw. einer Anpassung bedürfen.
 
 \subsection*{Hypothese und erwartete Erkenntnisse}
 Die zentrale Hypothese dieser Arbeit lautet, dass eine direkte Übertragung des TVD-Prozesses auf die deutsche Baupraxis aufgrund der strukturellen, rechtlichen und kulturellen Rahmenbedingungen nicht zielführend ist. Vielmehr wird angenommen, dass eine erfolgreiche Implementierung von Target Value Design über die bloße Einführung einer Methode hinausgeht und spezifische Anpassungen erfordert, um den Gegebenheiten in Deutschland gerecht zu werden.
