--- a/02_mainmatter/ch3_Methodik.tex
+++ b/02_mainmatter/ch3_Methodik.tex
@@ -21,8 +21,7 @@ Während die internationale Forschung die Grundlagen und Erfolgsfaktoren von TVD
 \subsection{Einordnung in das Forschungsparadigma}
 \label{sec: 3.1.2}
 
-Diese Arbeit als qualitativ verorten
-Begründung: der Kern besteht aus der Analyse von Inhalten (Texte, Konzepte), nicht auf Statistik
+Die vorliegende Arbeit folgt einem qualitativen Forschungsansatz, da der Fokus auf der Analyse und Interpretation von Inhalten wie Texten, Konzepten und Modellen liegt, nicht auf der statistischen Auswertung numerischer Daten. Darüber hinaus ist der gewählte Ansatz als konstruktiv einzuordnen. Das primäre Ziel ist nicht die rein deskriptive Beschreibung des bestehenden Forschungsstandes, sondern die aktive Konstruktion eines neuen Ergebnisses, des idealtypischen TVD-Modells. Dieses Vorgehen orientiert sich am Paradigma des Design Science Research (DSR), welches explizit darauf abzielt, durch die Entwicklung und Gestaltung von Artefakten einen Beitrag zur Lösung praxisrelevanter Probleme zu leisten \autocite[Vgl.][S.4]{benner-wickner_leitfaden_2020}.
 
 
 
