--- a/08_bibliography/references.bib
+++ b/08_bibliography/references.bib
@@ -1,4 +1,43 @@
 
+@article{benner-wickner_leitfaden_2020,
+	title = {Leitfaden für die {Nutzung} von {Design} {Science} {Research} in {Abschlussarbeiten}},
+	abstract = {A common topic when performing research in technical disciplines is to design some kind of artefact, such as a model, an information system, or a method for performing a certain task. To address this topic in a systematic and scientific way, Design Science Research (DSR) has established itself as an appropriate research method. There are many different variations of DSR, on different levels of complexity and detail, but all are based on an iterative approach of designing the desired artefact and evaluating it. This makes it difficult for many students to get an understanding of DSR in order to use it for their thesis (on bachelor or master level). The goal of the current paper therefore is to provide a short introduction to DSR for these students, based on the DSR variant described by (Österle et al., 2010) which is considered fairly basic and easy to understand and use. We do not try to introduce any new approach to DSR but provide a short introduction to this existing variant of DSR.},
+	language = {en},
+	number = {2},
+	author = {Benner-Wickner, Marian and Kneuper, Ralf and Schlömer, Inga},
+	year = {2020},
+}
+
+@book{mayring_qualitative_2022,
+	address = {Weinheim Basel},
+	edition = {13., überarbeitete Auflage},
+	title = {Qualitative {Inhaltsanalyse}: {Grundlagen} und {Techniken}},
+	isbn = {978-3-407-25899-1 978-3-407-25898-4},
+	shorttitle = {Qualitative {Inhaltsanalyse}},
+	language = {ger},
+	publisher = {Beltz},
+	author = {Mayring, Philipp},
+	year = {2022},
+}
+
+@book{noauthor_notitle_nodate,
+}
+
+@book{vom_brocke_design_2020,
+	address = {Cham},
+	series = {Progress in {IS}},
+	title = {Design {Science} {Research}. {Cases}},
+	copyright = {http://www.springer.com/tdm},
+	isbn = {978-3-030-46780-7 978-3-030-46781-4},
+	url = {http://link.springer.com/10.1007/978-3-030-46781-4},
+	language = {en},
+	urldate = {2025-10-11},
+	publisher = {Springer International Publishing},
+	editor = {Vom Brocke, Jan and Hevner, Alan and Maedche, Alexander},
+	year = {2020},
+	doi = {10.1007/978-3-030-46781-4},
+}
+
 @article{page_2021_prismaList,
 	title = {{PRISMA} 2020 {Checklist}},
 	issn = {1756-1833},
